--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,6 +74,8 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "rollup": "^3.0.0",
+    "vite-plugin-xyz": "^1.0.0"
   }
 }
